Fix JSON syntax.

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "David Tengeri",
-            "email": "dtengeri@gmail.com",
+            "email": "dtengeri@gmail.com"
         },
     ],
     "require": {
