--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,13 @@
         {
             "name": "David Tengeri",
             "email": "dtengeri@gmail.com"
-        },
+        }
     ],
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": "~2.3",
         "symfony/routing": "~2.3",
-        "symfony/yaml": "~2.3",
+        "symfony/yaml": "~2.3"
     },
     "target-dir": "Sed/RouteExporterBundle"
 }
