--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": "~2.3",
+        "symfony/console": "~2.3",
         "symfony/routing": "~2.3",
         "symfony/yaml": "~2.3"
     },
