--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
         "symfony/routing": "~2.3",
         "symfony/yaml": "~2.3"
     },
+    "autoload": {
+        "psr-0": { "Sed\\RouteExporterBundle": "" }
+    },
     "target-dir": "Sed/RouteExporterBundle"
 }
